tests/paczka1/small_fuzzy/87641357.err
Error in line 7: FDfJNRm S271 71,6
Error in line 8: 3Skegw A62 94,1
